# minnty-windictate

./: .gitignore  README.md  pyproject.toml
src/minnty_windictate/: __init__.py  app.py  audio.py  cli.py  config.py  console.py  environment.py  notify.py  paths.py  recorder_process.py  recording_state.py  service_process.py  service_runtime.py  session_runtime.py  session_server.py  settings.py  transcribe.py  typing.py
tests/: test_app.py  test_cli.py  test_config.py  test_console.py  test_environment.py  test_service_process.py  test_service_runtime.py  test_session_runtime.py  test_settings.py  test_transcribe.py
